src/blocks/howItWorks/index.scss
.howItWorks {
  background: var(--background-color);
}

.howItWorks__title {
  font-size: 68px;
  padding: 100px 0;
  text-align: center;
}

.howItWorks {
  padding: 100px 0;
}

.howItWorks.parent {
  padding-top: 0;
  h2 {
    padding: 20px 0px 100px 0;
  }
}

.howItWorks.chains,
.howItWorks.scripts {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 100% 100%;
}

.howItWorks.chains {
  background-image: url(../../img/howItWorks/obs_bg.jpg);
}

.howItWorks.scripts {
  padding-top: 180px;
  &:after {
    content: "";
    display: block;
    width: 45%;
    height: 665px;
    position: absolute;
    right: 0;
    top: 100px;
    background-image: url(../../img/howItWorks/obs_bg.jpg);
  }
}

.howItWorks.autoruns {
  padding-top: 180px;
  &:after {
    content: "";
    display: block;
    width: 45%;
    height: 665px;
    position: absolute;
    left: 0;
    top: 100px;
    background-image: url(../../img/howItWorks/obgs_bg_flipped.jpg);
  }
}

.howItWorks__item--light {
  background: var(--dark-violet);
}

.howItWorks__item__grid {
  display: grid;
  grid-template-areas: "title picture" "text picture" "features picture" "controls picture";
  grid-template-columns: 1fr minmax(60%, max-content);
  grid-gap: 30px 100px;

  .howItWorks__item--right & {
    grid-template-areas: "picture title" "picture text" "picture features" "picture controls";
    grid-template-columns: minmax(50%, max-content) 1fr;
  }
}

.howItWorks__item__title {
  font-size: 64px;
  font-weight: bold;
  grid-area: title;
}

.howItWorks__item__plus {
  margin: 0 10px;
}

.howItWorks__item__text {
  color: var(--lighter-grey);
  font-size: 24px;
  font-weight: 300;
  grid-area: text;
  line-height: 1.5;
  max-width: 400px;
}

.howItWorks__item__controls {
  grid-area: controls;
  margin-top: 20px;
}

.howItWorks__item__picture {
  grid-area: picture;
  position: relative;
  img {
    border-radius: 8px;
  }
}

.howItWorks__controls-images {
  position: relative;
  top: 125px;
  display: flex;
  margin: 0 30px;
  justify-content: space-between;
  z-index: 3;
  img {
    border-radius: 8px;
    max-width: 100%;
  }
}

// .howItWorks__item__video {
//   border-radius: 5px;
//   grid-area: video;
//   background: var(--dark-violet);
//   padding-top: 56.25%;
//   position: relative;

//   .howItWorks__item--light & {
//     background: var(--darkest-violet);
//   }
// }

.howItWorks__item__features {
  grid-area: features;
}

.howItWorks__item__feature {
  align-items: center;
  font-size: 30px;
  font-weight: 500;
  display: grid;
  grid-template-columns: 60px 1fr;
  line-height: 2;

  > svg {
    height: auto;
    justify-self: center;
    margin-right: 20px;
    width: auto;
  }
}

@media (max-width: 1440px) {
  .howItWorks.chains,
  .howItWorks.scripts {
    background-size: auto;
    background-position: 100% 25%;
  }
  .howItWorks__controls-images img:nth-of-type(4) ~ img {
    display: none;
  }
  .howItWorks__item__grid {
    grid-template-columns: auto;
    grid-gap: 30px 60px;
  }
}

@media (max-width: 1024px) {
  .howItWorks.chains,
  .howItWorks.scripts {
    background-size: 60%;
  }
  .howItWorks__item__picture img {
    width: 100%;
    height: auto;
  }
}

@media (max-width: 768px) {
  .howItWorks {
    padding: 50px 0;
  }

  .howItWorks__title {
    font-size: 36px;
    padding: 50px 0;
  }

  .howItWorks__item__grid,
  .howItWorks__item--right .howItWorks__item__grid {
    grid-template-areas: "title" "video" "text" "features" "controls" "picture";
    grid-template-columns: 1fr;
    grid-auto-rows: min-content;
    grid-gap: 16px;
  }

  .howItWorks__item__title {
    font-size: 36px;
  }

  .howItWorks__item__feature {
    font-size: 20px;
  }

  .howItWorks__item__text {
    font-size: 16px;
  }

  .howItWorks__item__controls {
    .button {
      width: 100%;
    }
  }

  .howItWorks.chains {
    background-image: none;
  }

  .howItWorks.autoruns:after,
  .howItWorks.scripts:after {
    display: none;
  }

  .howItWorks__controls-images {
    top: 25px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-row-gap: 15px;
    img {
      margin-left: auto;
      margin-right: auto;
    }
  }

  .howItWorks.scripts,
  .howItWorks.autoruns {
    padding-top: 80px;
  }

}

@media (max-width: 700px) {
  .howItWorks.parent h2 {
    padding-bottom: 50px;
  }
}

